--- a/package.json
+++ b/package.json
@@ -5,19 +5,13 @@
   "main": "index.js",
   "browser": "browser.js",
   "dependencies": {
-    "ecstatic": "~0.4.12",
-    "hyperspace": "~0.5.0",
-    "level": "~0.17.0-1",
-    "multilevel": "~5.5.0",
+    "ent": "~0.1.0",
+    "inherits": "~2.0.1",
+    "quotemeta": "~0.0.0",
     "split": "~0.2.10",
-    "trumpet": "~1.6.2",
-    "inherits": "~2.0.1"
-  },
-  "devDependencies": {
-    "tape": "~1.0.4"
-  },
-  "scripts": {
-    "test": "tape test/*.js"
+    "stream-combiner": "~0.0.2",
+    "through": "~2.3.4",
+    "trumpet": "~1.6.2"
   },
   "repository": {
     "type": "git",
