--- a/example/package.json
+++ b/example/package.json
@@ -15,6 +15,7 @@
     "level-live-stream": "~1.4.7",
     "pull-level": "~1.1.9",
     "pull-stream-to-stream": "~1.2.6",
-    "shoe": "0.0.15"
+    "shoe": "0.0.15",
+    "browserify": "~2.35.0"
   }
 }
