--- a/example/package.json
+++ b/example/package.json
@@ -1,6 +1,9 @@
 {
   "name": "tabby-example",
   "version": "0.0.0",
+  "browserify": {
+    "transform": [ "brfs" ]
+  },
   "scripts": {
     "watch": "watchify browser.js -o static/bundle.js -dv",
     "start": "node server.js"
