--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "inherits": "~2.0.1",
     "quotemeta": "~0.0.0",
     "through": "~2.3.4",
-    "trumpet": "~1.6.2"
+    "trumpet": "~1.6.2",
+    "process": "~0.5.1"
   },
   "devDependencies": {
     "tape": "~2.1.0"
