--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tabby",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "create tabbed web apps with progressive enhancement",
   "main": "index.js",
   "browser": "browser.js",
@@ -9,7 +9,8 @@
     "quotemeta": "~0.0.0",
     "through": "~2.3.4",
     "trumpet": "~1.6.2",
-    "process": "~0.5.1"
+    "process": "~0.5.1",
+    "stream-combiner": "~0.0.2"
   },
   "devDependencies": {
     "tape": "~2.1.0"
